login basico funcional

--- a/FacturacionCSR/src/main/resources/static/pages/facturar/view.html
+++ b/FacturacionCSR/src/main/resources/static/pages/facturar/view.html
@@ -5,18 +5,13 @@
     <title>Facturacion</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/menu.css">
-    <script src="/js/menu.js"> </script>
-    <script src="controller.js"> </script>
+    <script src="/js/menu.js"></script>
+    <script src="controller.js"></script>
 </head>
 <body>
 <header class="header" id="menu"></header>
 <div class='container'>
-    <div class='row'>
-        <div class='col-6'>
-            <h1>Bienvenido al sistema de Facturación Electrónica</h1>
-            <h1>Use la opción de login para ingresar</h1>
-        </div>
-    </div>
+    Desarrollar vista de facturar.
 </div>
 </body>
 </html>
