--- a/FacturacionCSR/src/main/resources/static/pages/bienvenida/view.html
+++ b/FacturacionCSR/src/main/resources/static/pages/bienvenida/view.html
@@ -5,8 +5,6 @@
     <title>Facturacion</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/menu.css">
-    <script src="/js/menu.js"> </script>
-    <script src="controller.js"> </script>
 </head>
 <body>
 <header class="header" id="menu"></header>
@@ -15,8 +13,12 @@
         <div class='col-6'>
             <h1>Bienvenido al sistema de Facturación Electrónica</h1>
             <h1>Use la opción de login para ingresar</h1>
+            <h2>¿No tiene cuenta? <a href="#" id="registrolink">Regístrese aquí</a></h2>
         </div>
     </div>
 </div>
+<script src="/js/login.js"> </script>
+<script src="/js/menu.js"> </script>
+<script src="controller.js"> </script>
 </body>
 </html>
