administracion, registro y perfil

--- a/FacturacionCSR/src/main/resources/static/pages/facturar/view.html
+++ b/FacturacionCSR/src/main/resources/static/pages/facturar/view.html
@@ -5,6 +5,7 @@
     <title>Facturacion</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/menu.css">
+    <script src="/js/login.js"> </script>
     <script src="/js/menu.js"></script>
     <script src="controller.js"></script>
     <script src="../../js/login.js"></script>
