--- a/FacturacionCSR/src/main/resources/static/pages/clientes/view.html
+++ b/FacturacionCSR/src/main/resources/static/pages/clientes/view.html
@@ -6,36 +6,35 @@
     <link rel="icon" href="../../images/user_green.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/menu.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/js/login.js"> </script>
-    <script src="/js/menu.js"> </script>
-    <script src="controller.js"> </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <header class="header" id="menu"></header>
-    <div class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">
-        <button id="btnCrear" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalCliente">CREAR NUEVO CLIENTE</button>
+<div class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">
+    <div class="d-flex justify-content-between">
+        <button id="btnCrear" type="button" class="btn btn-success" data-bs-toggle="modal"
+                data-bs-target="#modalCliente">CREAR NUEVO CLIENTE
+        </button>
         <input type="text" id="nombreBusqueda" placeholder="Buscar por nombre">
-        <button id="btnBuscar" class="btn btn-primary">Buscar</button>-
-        <table id="TablaClientes" class="table mt-2 table-bordered table-stripped">
-            <thead>
-            <tr class="text-center">
-                <th>ID</th>
-                <th>NOMBRE</th>
-                <th>CORREO ELECTRONICO</th>
-                <th>NUMERO DE TELEFONO</th>
-                <th>DIRECCION</th>
-                <th>ACCIONES</th>
-            </tr>
-            </thead>
-            <tbody>
-
-            </tbody>
-        </table>
+        <button id="btnBuscar" class="btn btn-primary">Buscar</button>
     </div>
-
+    <table id="TablaClientes" class="table mt-2 table-bordered table-striped">
+        <thead>
+        <tr class="text-center">
+            <th>ID</th>
+            <th>NOMBRE</th>
+            <th>CORREO ELECTRONICO</th>
+            <th>NUMERO DE TELEFONO</th>
+            <th>DIRECCION</th>
+            <th>ACCIONES</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Los datos de los clientes se renderizarán aquí -->
+        </tbody>
+    </table>
+</div>
 
 <div class="modal fade" id="modalCliente" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -48,7 +47,7 @@
                 <form>
                     <div class="mb-3">
                         <label for="id" class="col-form-label">ID</label>
-                        <input id="id" type="text" class="form-control" autofocus>
+                        <input id="id" type="text" class="form-control" readonly>
                     </div>
                     <div class="mb-3">
                         <label for="nombre" class="col-form-label">Nombre</label>
@@ -60,11 +59,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="numTelefono" class="col-form-label">Telefono</label>
-                        <input id="numTelefono" type="tel" pattern="[0-9]{8}" class="form-control" >
+                        <input id="numTelefono" type="tel" pattern="[0-9]{8}" class="form-control">
                     </div>
                     <div class="mb-3">
                         <label for="direccion" class="col-form-label">Direccion</label>
-                        <input id="direccion" type="text" class="form-control" >
+                        <input id="direccion" type="text" class="form-control">
                     </div>
                 </form>
             </div>
@@ -75,5 +74,11 @@
         </div>
     </div>
 </div>
+<script src="/js/login.js"></script>
+<script src="/js/menu.js"></script>
+<script src="controller.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
