--- a/FacturacionCSR/src/main/resources/static/pages/productos/view.html
+++ b/FacturacionCSR/src/main/resources/static/pages/productos/view.html
@@ -6,17 +6,16 @@
     <link rel="icon" href="../../images/product_icon.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/menu.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/js/login.js"> </script>
-    <script src="/js/menu.js"> </script>
-    <script src="controller.js"> </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 <header class="header" id="menu"></header>
 <div class="container mt-4 shadow-lg p-3 mb-5 bg-body rounded">
     <div class="d-flex justify-content-between">
-        <button id="btnCrear" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalProducto">CREAR NUEVO PRODUCTO</button>
+        <button id="btnCrear" type="button" class="btn btn-success" data-bs-toggle="modal"
+                data-bs-target="#modalProducto">CREAR NUEVO PRODUCTO
+        </button>
         <input type="text" id="nombreBusqueda" placeholder="Buscar por nombre">
         <button id="btnBuscar" class="btn btn-primary">Buscar</button>
     </div>
@@ -47,7 +46,7 @@
                 <form>
                     <div class="mb-3">
                         <label for="id" class="col-form-label">ID</label>
-                        <input id="id" type="text" class="form-control" autofocus>
+                        <input id="id" type="text" class="form-control" readonly>
                     </div>
                     <div class="mb-3">
                         <label for="nombre" class="col-form-label">Nombre</label>
@@ -70,5 +69,11 @@
         </div>
     </div>
 </div>
+<script src="/js/login.js"></script>
+<script src="/js/menu.js"></script>
+<script src="controller.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
